--- a/src/test/TransactionToAssetFlowTest.cls
+++ b/src/test/TransactionToAssetFlowTest.cls
@@ -74,7 +74,7 @@
             Account testAccount = new Account(Name = 'TestAccount');
             insert testAccount;
             LGK__Transaction__c newTransaction = new LGK__Transaction__c(
-                LGK__TransactionType__c = 'Quote',
+                TransactionType__c = 'Quote',
                 LGK__AccountId__c = testAccount.Id
             );
             insert newTransaction;
@@ -105,7 +105,7 @@
             ];
             LGK__TransactionLine__c childLine = [
                 SELECT Id, LGK__Product2Id__c, LGK__ConfigurationId__c, StartDate__c, EndDate__c,
-                    LGK__Quantity__c, LGK__DeltaQuantity__c, LGK__PricingNet__c, LGK__DeltaPrice__c, SubscriptionBOMLineId__c
+                    LGK__Quantity__c, DeltaQuantity__c, LGK__PricingNet__c, DeltaPrice__c, SubscriptionBOMLineId__c
                 FROM LGK__TransactionLine__c
                 LIMIT 1
             ];
@@ -118,7 +118,7 @@
             TransactionToAssetFlowHelper.upsertAssets(flowInputsList);
             // Assets
             Asset[] assetList = [
-                SELECT Id, AccountId, Product2Id, Quantity, Price, LGK__TransactionLineId__c, SubscriptionBOMLineId__c
+                SELECT Id, AccountId, Product2Id, Quantity, Price, TransactionLineId__c, SubscriptionBOMLineId__c
                 FROM Asset
             ];
             System.assertEquals(1, assetList.size(),
@@ -131,26 +131,26 @@
                 'Asset quantity did not match transaction line.');
             System.assertEquals(childLine.LGK__PricingNet__c, assetList[0].Price,
                 'Asset price did not match transaction line.');
-            System.assertEquals(childLine.Id, assetList[0].LGK__TransactionLineId__c,
+            System.assertEquals(childLine.Id, assetList[0].TransactionLineId__c,
                 'Asset transaction line was not set correctly.');
             System.assertEquals(childLine.SubscriptionBOMLineId__c, assetList[0].SubscriptionBOMLineId__c,
                 'Asset Subscription BOM Line Id was not set correctly.');
 
             // Asset Revision History
             AssetRevisionHistory__c[] assetRevisionHistoryList = [
-                SELECT LGK__TransactionLineId__c, 
-                    LGK__DeltaQuantity__c,
-                    LGK__DeltaPrice__c,
+                SELECT TransactionLineId__c, 
+                    DeltaQuantity__c,
+                    DeltaPrice__c,
                     StartDate__c, EndDate__c
                 FROM AssetRevisionHistory__c
             ];
             System.assertEquals(1, assetRevisionHistoryList.size(),
                 'Number of Asset Revision History created did not match the expected amount.');
-            System.assertEquals(childLine.Id, assetRevisionHistoryList[0].LGK__TransactionLineId__c,
+            System.assertEquals(childLine.Id, assetRevisionHistoryList[0].TransactionLineId__c,
                 'Asset Revision History did not have the expected Transaction Line Id.');
-            System.assertEquals(childLine.LGK__Quantity__c, assetRevisionHistoryList[0].LGK__DeltaQuantity__c,
+            System.assertEquals(childLine.LGK__Quantity__c, assetRevisionHistoryList[0].DeltaQuantity__c,
                 'Asset Revision History delta quantity did not match transaction line.');
-            System.assertEquals(childLine.LGK__PricingNet__c, assetRevisionHistoryList[0].LGK__DeltaPrice__c,
+            System.assertEquals(childLine.LGK__PricingNet__c, assetRevisionHistoryList[0].DeltaPrice__c,
                 'Asset Revision History quantity did not match transaction line.');
             System.assertEquals(childLine.StartDate__c, assetRevisionHistoryList[0].StartDate__c,
                 'Asset Revision History quantity did not match parent transaction.');
@@ -168,15 +168,15 @@
         User testUser = [SELECT fields(Standard) FROM User WHERE UserName= :USERNAME];
         System.runAs(testUser) {
             LGK__Transaction__c testTransaction = [
-                SELECT Id, LGK__AccountId__c, LGK__TransactionType__c
+                SELECT Id, LGK__AccountId__c, TransactionType__c
                 FROM LGK__Transaction__c
                 LIMIT 1
             ];
             LGK__TransactionLine__c childLine = [
                 SELECT Id, LGK__Quantity__c, LGK__PricingNet__c, LGK__ConfigurationId__c,
                     LGK__Product2Id__c, LGK__Product2Id__r.Name,
-                    LGK__AssetId__c, StartDate__c, EndDate__c,
-                    LGK__DeltaQuantity__c, LGK__DeltaPrice__c
+                    AssetId__c, StartDate__c, EndDate__c,
+                    DeltaQuantity__c, DeltaPrice__c
                 FROM LGK__TransactionLine__c
                 LIMIT 1
             ];
@@ -188,10 +188,10 @@
                 Product2Id = childLine.LGK__Product2Id__c,
                 Quantity = childLine.LGK__Quantity__c,
                 Price = childLine.LGK__PricingNet__c,
-                LGK__TransactionLineId__c = childLine.Id
+                TransactionLineId__c = childLine.Id
             );
             insert newAsset;
-            childLine.LGK__AssetId__c = newAsset.Id;
+            childLine.AssetId__c = newAsset.Id;
             childLine.LGK__Quantity__c = 10;    // Originally 5
             childLine.LGK__PricingNet__c = 8;     // Originally 10
             update childLine;
@@ -200,15 +200,15 @@
                 LGK__Product2Id__c = childLine.LGK__Product2Id__c,
                 LGK__Quantity__c = 10,
                 LGK__PricingNet__c = 8,
-                LGK__AssetId__c = newAsset.Id,
-                LGK__DeltaQuantity__c = 5,
-                LGK__DeltaPrice__c = -2,
+                AssetId__c = newAsset.Id,
+                DeltaQuantity__c = 5,
+                DeltaPrice__c = -2,
                 StartDate__c = Date.today(),
                 EndDate__c = Date.today().addYears(3)
             );
             insert revisionLine;
 
-            testTransaction.LGK__TransactionType__c = 'Amendment';
+            testTransaction.TransactionType__c = 'Amendment';
             update testTransaction;
 
             TransactionToAssetFlowHelper.FlowInput[] flowInputsList = new TransactionToAssetFlowHelper.FlowInput[]{
@@ -221,7 +221,7 @@
 
             // Assets
             Asset[] assetList = [
-                SELECT Id, AccountId, Product2Id, Quantity, Price, LGK__TransactionLineId__c
+                SELECT Id, AccountId, Product2Id, Quantity, Price, TransactionLineId__c
                 FROM Asset
                 ORDER BY Id ASC
             ];
@@ -234,18 +234,18 @@
 
             // Asset Revision History
             AssetRevisionHistory__c[] assetRevisionHistoryList = [
-                SELECT LGK__TransactionLineId__c, StartDate__c, EndDate__c,
-                    LGK__DeltaQuantity__c, LGK__DeltaPrice__c
+                SELECT TransactionLineId__c, StartDate__c, EndDate__c,
+                    DeltaQuantity__c, DeltaPrice__c
                 FROM AssetRevisionHistory__c
             ];
             System.assertEquals(1, assetRevisionHistoryList.size(),
                 'New Asset Revision History was not created during amend.');
-            System.assertEquals(revisionLine.Id, assetRevisionHistoryList[0].LGK__TransactionLineId__c,
+            System.assertEquals(revisionLine.Id, assetRevisionHistoryList[0].TransactionLineId__c,
                 'Asset Revision History did not have the expected Transaction Line Id.');
-            // System.assertEquals(deltaQuantity, assetRevisionHistoryList[0].LGK__DeltaQuantity__c,
-            System.assertEquals(revisionLine.LGK__DeltaQuantity__c, assetRevisionHistoryList[0].LGK__DeltaQuantity__c,
+            // System.assertEquals(deltaQuantity, assetRevisionHistoryList[0].DeltaQuantity__c,
+            System.assertEquals(revisionLine.DeltaQuantity__c, assetRevisionHistoryList[0].DeltaQuantity__c,
                 'Asset Revision History delta quantity did not match transaction line.');
-            System.assertEquals(revisionLine.LGK__DeltaPrice__c, assetRevisionHistoryList[0].LGK__DeltaPrice__c,
+            System.assertEquals(revisionLine.DeltaPrice__c, assetRevisionHistoryList[0].DeltaPrice__c,
                 'Asset Revision History delta price did not match transaction line.');
             System.assertEquals(revisionLine.StartDate__c, assetRevisionHistoryList[0].StartDate__c,
                 'Asset Revision History start date did not match transaction line.');
