LGK-18010: Updating asset name on product swap

--- a/src/main/classes/TransactionToAssetFlowHelper.cls
+++ b/src/main/classes/TransactionToAssetFlowHelper.cls
@@ -138,6 +138,7 @@ global with sharing class TransactionToAssetFlowHelper {
                     newAssetRevisionMap.put(transactionLine.Id, assetRevision);
                     // Update asset with product Id, if it changed
                     if (assetRevision.Product2Id__c != null && eachAsset.Product2Id != assetRevision.Product2Id__c) {
+                        eachAsset.Name = assetRevision.Product2Id__r.Name;
                         eachAsset.Product2Id = assetRevision.Product2Id__c;
                     }
                 }
@@ -211,7 +212,7 @@ global with sharing class TransactionToAssetFlowHelper {
 
         try {
             return new Map<Id, Asset>([
-                SELECT Id, AccountId, Product2Id, Quantity, Price, ParentId, 
+                SELECT Id, Name, AccountId, Product2Id, Quantity, Price, ParentId, 
                     TransactionLineId__c, LGK__ConfigurationId__c, SubscriptionBOMLineId__c //, LGK__UniqueId__c
                 FROM Asset
                 WHERE Id IN :assetIdSet
@@ -244,9 +245,12 @@ global with sharing class TransactionToAssetFlowHelper {
 
         // Update fields based on latest transaction line(s)
         updatingAsset.TransactionLineId__c = transactionLine.Id;
-        // Account, Product are less likely to change
+        // Account is less likely to change
         updatingAsset.AccountId = transactionLine.LGK__TransactionId__r.LGK__AccountId__c;
-        updatingAsset.Product2Id = transactionLine.LGK__Product2Id__c;
+        if (updatingAsset.Product2Id != transactionLine.LGK__Product2Id__c) {
+            updatingAsset.Name = transactionLine.LGK__Product2Id__r.Name;
+            updatingAsset.Product2Id = transactionLine.LGK__Product2Id__c;
+        }
         updatingAsset.Quantity = transactionLine.LGK__Quantity__c;
         updatingAsset.Price = transactionLine.LGK__PricingNet__c;
         updatingAsset.StartDate__c = transactionLine.StartDate__c;
